# RDNA_Cast

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakePresets.json  RDNA_CAST_ADDITIONS_LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  build.bat  installer.iss
UI/: amd-gpu-info.cpp  auth-youtube.cpp  auth-youtube.hpp  obs-app.cpp  remote-text.cpp  status-overlay.cpp  status-overlay.hpp  ui-config.h.in  update-lite-amd.cpp  update-lite-amd.hpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-status-bar.cpp  window-basic-status-bar.hpp  youtube-api-wrappers.cpp
UI/cmake/: feature-youtube.cmake  os-windows.cmake
UI/data/locale/: en-US.ini
UI/data/themes/: Yami_RDNACast.ovt  Yami_RDNACastDark.ovt
UI/forms/: OBSBasic.ui  OBSBasicControls.ui  OBSBasicSettings.ui
cmake/windows/: compilerconfig.cmake  defaults.cmake
installer_assets/: LICENSE.txt
libobs/: obs-source.c  obs-windows.c
plugins/: CMakeLists.txt
